[package]
name = "qoi"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0"
rgb = "0.8"
byteorder = "1.4"
bytes = "1.1"

[dev-dependencies]
criterion = "0.3"
anyhow = "1.0"
image = { version = "0.23", default-features = false, features = ["png"] }
clap = { version = "3.0.0-rc.7", features = ["derive"] }

[[bench]]
name = "decode"
harness = false
